tests/conditional_type_unsupported/test.js
type BasicConditionalType = 1 extends number ? string : number; // error: unsupported
const num: BasicConditionalType = "";
